@@ -3,14 +3,20 @@ Build.PL
 examples/index.tt
 examples/perlanetrc
 lib/Perlanet.pm
+lib/Perlanet/Entry.pm
+lib/Perlanet/Feed.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
 t/01_basic.t
+t/02_basic.t
+t/03_noconf.t
+t/04_moose_constr.t
 t/pod.t
 t/pod_coverage.t
 t/testrc
 t/index.tt
+t/perlanetrc
 README
 Changes
 t/data/davblog.xml
