@@ -1,0 +1,19 @@
+title: planet test
+description: Testing stuff
+url: http://theplanetarium.org/
+cache_dir: cache
+author:
+  name: Dave Cross
+  email: dave@dave.org.uk
+entries: 10
+page:
+  file: index.html
+  template: index.tt
+feed:
+  file: atom.xml
+  format: Atom
+feeds:
+  - url: file:data/davblog.xml
+    title: davblog
+    web: http://blogs.dave.org.uk/
+
